test/should_fail/PropertyAlreadyDynamic2.oj

@implementation PropertyAlreadyDynamic

@property id foo;
@dynamic foo;
@dynamic foo;

@end
